--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "autoprefixer": "^10.3.5",
+    "postcss": "^8.3.8",
+    "tailwindcss": "^2.2.15"
   }
 }
