--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "env-cmd -f .env.staging next dev",
+    "build:staging": "env-cmd -f .env.staging next build",
+    "build:production": "env-cmd -f .env.production next build"
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "env-cmd": "^10.1.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
