--- a/.env.production
+++ b/.env.production
@@ -10,6 +10,7 @@ NEXT_PUBLIC_APP_POSTER_IMAGE=/static/images/logo/logo_1024x1024.png
 NEXT_PUBLIC_APP_LOGO_IMAGE=/static/images/logo/logo_500x500.png
 NEXT_PUBLIC_APP_HASH=#uvsity
 NEXT_PUBLIC_APP_OG_TOKEN_UUID=e3ac6904-f01b-47d2-99e9-048d3840b5b5
+NEXT_PUBLIC_APP_FOOTER_TEXT=© 2021 UVsity Corporation.‎
 NEXT_PUBLIC_APP_MANIFEST_PATH=/manifest.json
 NEXT_PUBLIC_APP_FAVICON_PATH=/favicon.ico
 NEXT_PUBLIC_APP_THEME_COLOR=#0f8dbf
