--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "uvsity-build-2.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "env-cmd -f .env.staging next dev",
@@ -6,13 +8,23 @@
     "build:production": "env-cmd -f .env.production next build"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@tailwindcss/line-clamp": "^0.2.1",
     "axios": "^0.21.4",
     "env-cmd": "^10.1.0",
+    "html-react-parser": "^1.3.0",
     "next": "latest",
     "react": "^17.0.2",
+    "react-avatar": "^3.10.0",
+    "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
+    "react-loading-overlay-ts": "^0.2.0",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
+    "react-spinners": "^0.11.0",
     "react-toastify": "^8.0.3",
+    "react-visibility-sensor": "^5.1.1",
     "sass": "^1.42.1",
     "uuidv4": "^6.2.12"
   },
