--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-router-dom": "^5.3.0",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.0.3",
+    "react-typewriter": "^0.4.1",
     "react-visibility-sensor": "^5.1.1",
     "sass": "^1.42.1",
+    "typewriter-effect": "^2.18.2",
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
