--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-avatar": "^3.10.0",
+    "react-corner-ribbon": "^0.0.5",
     "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
     "react-loading-overlay-ts": "^0.2.0",
