--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build:production": "env-cmd -f .env.production next build"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/material": "^5.0.2",
     "@tailwindcss/line-clamp": "^0.2.1",
     "axios": "^0.21.4",
     "env-cmd": "^10.1.0",
@@ -20,6 +22,7 @@
     "react-corner-ribbon": "^0.0.5",
     "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-loading-overlay-ts": "^0.2.0",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
