--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_APP_HOME_URL=https://www.uvsity.com/
 NEXT_PUBLIC_APP_NAME=uvsity
+NEXT_PUBLIC_APP_NAME_V2=UVSity
 NEXT_PUBLIC_APP_OG_NAME=uvsity.com: Log In or Sign Up
 NEXT_PUBLIC_APP_OG_TYPE=website
 NEXT_PUBLIC_APP_TITLE=UVSITY | Educational Social Network
