--- a/.env.staging
+++ b/.env.staging
@@ -18,3 +18,5 @@ NEXT_PUBLIC_APP_FAVICON_PATH=/favicon.ico
 NEXT_PUBLIC_APP_THEME_COLOR=#0f8dbf
 NEXT_PUBLIC_API_URL=https://dev.uvsity.com/uvsity/v1/
 NEXT_PUBLIC_API_URLV2=https://dev.uvsity.com/uvsity/v2/
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LcR5PwSAAAAAExCXrkpFPC4oT5oRtdf4uqhfLVG
+GENERATE_SOURCEMAP=false
