--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uvsity-build-2.0",
+  "name": "uvsity-v2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,15 +14,18 @@
     "@mui/material": "^5.0.2",
     "@tailwindcss/line-clamp": "^0.2.1",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
     "env-cmd": "^10.1.0",
     "html-react-parser": "^1.3.0",
-    "next": "latest",
-    "react": "^17.0.2",
+    "next": "11.1.2",
+    "react": "17.0.2",
     "react-avatar": "^3.10.0",
+    "react-bootstrap-icons": "^1.5.0",
     "react-corner-ribbon": "^0.0.5",
     "react-countup": "^6.0.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-hook-form": "^7.17.0",
     "react-loader-spinner": "^4.0.0",
     "react-loading-overlay-ts": "^0.2.0",
     "react-player": "^2.9.0",
@@ -31,13 +34,16 @@
     "react-toastify": "^8.0.3",
     "react-typewriter": "^0.4.1",
     "react-visibility-sensor": "^5.1.1",
+    "reactstrap": "^8.10.0",
     "sass": "^1.42.1",
     "save": "^2.4.0",
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.5",
+    "autoprefixer": "^10.3.6",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
     "postcss": "^8.3.8",
-    "tailwindcss": "^2.2.15"
+    "tailwindcss": "^2.2.16"
   }
 }
