--- a/.env.production
+++ b/.env.production
@@ -3,12 +3,16 @@ NEXT_PUBLIC_APP_NAME=uvsity
 NEXT_PUBLIC_APP_NAME_V2=UVSity
 NEXT_PUBLIC_APP_OG_NAME=uvsity.com: Log In or Sign Up
 NEXT_PUBLIC_APP_OG_TYPE=website
-NEXT_PUBLIC_APP_TITLE=UVSITY | Educational Social Network
+NEXT_PUBLIC_APP_TITLE=uvsity | Educational Social Network
 NEXT_PUBLIC_APP_OG_TITLE=UVSITY | Educational Social Network
 NEXT_PUBLIC_APP_DESC=Signup today and get your free personal appointment app with integrated web conferencing. Host your online sessions and events on uvsity.com!
 NEXT_PUBLIC_APP_KEYWORDS=Educational Social Network Signup today and get your free personal appointment app with integrated web conferencing. Host your online sessions and events on uvsity.com! 
 NEXT_PUBLIC_APP_POSTER_IMAGE=/static/images/logo/logo_1024x1024.png
 NEXT_PUBLIC_APP_LOGO_IMAGE=/static/images/logo/logo_500x500.png
+NEXT_PUBLIC_APP_HERO_IMAGE=/static/images/hero-poster.png
+NEXT_PUBLIC_APP_STATS_ILLUSTRATION_IMAGE=/static/images/stats_counter_illustration.png
+NEXT_PUBLIC_APP_TRENDING_SESSION_ILLUSTRATION_IMAGE=/static/images/hero-poster.jpg
+NEXT_PUBLIC_APP_CONTINUE_WITH_GOOGLE_IMAGE=/static/images/sign_in_with_google.png
 NEXT_PUBLIC_APP_HASH=#uvsity
 NEXT_PUBLIC_APP_OG_TOKEN_UUID=e3ac6904-f01b-47d2-99e9-048d3840b5b5
 NEXT_PUBLIC_APP_FOOTER_TEXT=© 2021 UVsity Corporation.‎
