--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build:production": "env-cmd -f .env.production next build"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@hookform/error-message": "^2.0.0",
@@ -17,6 +19,7 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "chalk": "^4.1.2",
     "env-cmd": "^10.1.0",
     "html-react-parser": "^1.3.0",
     "next": "11.1.2",
@@ -26,6 +29,7 @@
     "react-corner-ribbon": "^0.0.5",
     "react-countup": "^6.0.0",
     "react-dom": "17.0.2",
+    "react-google-login": "^5.2.2",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.17.0",
     "react-loader-spinner": "^4.0.0",
