--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "chalk": "^4.1.2",
+    "d3-ease": "^3.0.1",
     "env-cmd": "^10.1.0",
     "html-react-parser": "^1.3.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-avatar": "^3.10.0",
     "react-bootstrap-icons": "^1.5.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-corner-ribbon": "^0.0.5",
     "react-countup": "^6.0.0",
     "react-dom": "17.0.2",
@@ -34,6 +35,7 @@
     "react-hook-form": "^7.17.0",
     "react-loader-spinner": "^4.0.0",
     "react-loading-overlay-ts": "^0.2.0",
+    "react-move": "^6.5.0",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
     "react-spinners": "^0.11.0",
