--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "env-cmd -f .env.staging next dev",
-    "build:staging": "env-cmd -f .env.staging next build",
+    "build:staging": "env-cmd -f .env.staging next build && next export",
     "build:production": "env-cmd -f .env.production next build"
   },
   "dependencies": {
