--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.8.1",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
     "@tailwindcss/line-clamp": "^0.2.1",
+    "@tiptap/react": "^2.0.0-beta.104",
+    "@tiptap/starter-kit": "^2.0.0-beta.168",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "chalk": "^4.1.2",
     "d3-ease": "^3.0.1",
     "env-cmd": "^10.1.0",
+    "esm": "^3.2.25",
     "html-react-parser": "^1.3.0",
     "next": "11.1.2",
     "react": "17.0.2",
@@ -32,13 +36,16 @@
     "react-corner-ribbon": "^0.0.5",
     "react-countup": "^6.0.0",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-google-login": "^5.2.2",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.17.0",
     "react-loader-spinner": "^4.0.0",
     "react-loading-overlay-ts": "^0.2.0",
     "react-move": "^6.5.0",
+    "react-mui-fileuploader": "^0.1.2",
     "react-player": "^2.9.0",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.3.0",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.0.3",
