--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@date-io/date-fns": "1.x",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.8.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.63",
     "@mui/material": "^5.0.2",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tiptap/react": "^2.0.0-beta.104",
@@ -26,6 +29,7 @@
     "bootstrap": "^5.1.1",
     "chalk": "^4.1.2",
     "d3-ease": "^3.0.1",
+    "date-fns": "^2.28.0",
     "env-cmd": "^10.1.0",
     "esm": "^3.2.25",
     "html-react-parser": "^1.3.0",
