--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "react-move": "^6.5.0",
     "react-mui-fileuploader": "^0.1.2",
     "react-player": "^2.9.0",
+    "react-query": "^3.34.12",
+    "react-query-devtools": "^2.6.3",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.3.0",
     "react-spinners": "^0.11.0",
