--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "date-fns": "^2.28.0",
     "env-cmd": "^10.1.0",
     "esm": "^3.2.25",
+    "gapi-oauth-react-hooks": "^3.4.1",
+    "google-auth-library": "^7.11.0",
     "html-react-parser": "^1.4.5",
     "next": "11.1.2",
     "react": "17.0.2",
@@ -65,6 +67,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/gapi.auth2": "0.0.56",
     "autoprefixer": "^10.3.6",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
