--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gapi-oauth-react-hooks": "^3.4.1",
     "google-auth-library": "^7.11.0",
     "html-react-parser": "^1.4.5",
+    "lodash": "^4.17.21",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-bootstrap-icons": "^1.5.0",
@@ -61,6 +62,7 @@
     "react-typewriter": "^0.4.1",
     "react-visibility-sensor": "^5.1.1",
     "reactstrap": "^8.10.0",
+    "rxjs": "^7.5.2",
     "sass": "^1.42.1",
     "save": "^2.4.0",
     "uuidv4": "^6.2.12",
