--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-google-login": "^5.2.2",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.17.0",
+    "react-idle-timer": "^4.6.4",
     "react-loader-spinner": "^4.0.0",
     "react-loading-overlay-ts": "^0.2.0",
     "react-loading-skeleton": "^3.0.2",
