--- a/ckeditor5/package.json
+++ b/ckeditor5/package.json
@@ -7,22 +7,14 @@
   "private": true,
   "main": "./build/ckeditor.js",
   "devDependencies": {
-    "@ckeditor/ckeditor5-adapter-ckfinder": "^32.0.0",
     "@ckeditor/ckeditor5-alignment": "^32.0.0",
     "@ckeditor/ckeditor5-autoformat": "^32.0.0",
-    "@ckeditor/ckeditor5-autosave": "^32.0.0",
     "@ckeditor/ckeditor5-basic-styles": "^32.0.0",
     "@ckeditor/ckeditor5-block-quote": "^32.0.0",
-    "@ckeditor/ckeditor5-ckfinder": "^32.0.0",
-    "@ckeditor/ckeditor5-cloud-services": "^32.0.0",
-    "@ckeditor/ckeditor5-code-block": "^32.0.0",
-    "@ckeditor/ckeditor5-comments": "^32.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^25.4.5",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^25.4.5",
     "@ckeditor/ckeditor5-editor-classic": "^32.0.0",
     "@ckeditor/ckeditor5-essentials": "^32.0.0",
-    "@ckeditor/ckeditor5-export-pdf": "^32.0.0",
-    "@ckeditor/ckeditor5-export-word": "^32.0.0",
     "@ckeditor/ckeditor5-find-and-replace": "^32.0.0",
     "@ckeditor/ckeditor5-font": "^32.0.0",
     "@ckeditor/ckeditor5-heading": "^32.0.0",
@@ -32,26 +24,18 @@
     "@ckeditor/ckeditor5-html-support": "^32.0.0",
     "@ckeditor/ckeditor5-image": "^32.0.0",
     "@ckeditor/ckeditor5-indent": "^32.0.0",
-    "@ckeditor/ckeditor5-language": "^32.0.0",
     "@ckeditor/ckeditor5-link": "^32.0.0",
     "@ckeditor/ckeditor5-list": "^32.0.0",
     "@ckeditor/ckeditor5-markdown-gfm": "^32.0.0",
     "@ckeditor/ckeditor5-media-embed": "^32.0.0",
-    "@ckeditor/ckeditor5-mention": "^32.0.0",
-    "@ckeditor/ckeditor5-page-break": "^32.0.0",
-    "@ckeditor/ckeditor5-pagination": "^32.0.0",
     "@ckeditor/ckeditor5-paragraph": "^32.0.0",
     "@ckeditor/ckeditor5-paste-from-office": "^32.0.0",
-    "@ckeditor/ckeditor5-remove-format": "^32.0.0",
-    "@ckeditor/ckeditor5-restricted-editing": "^32.0.0",
-    "@ckeditor/ckeditor5-revision-history": "^32.0.0",
+    "@ckeditor/ckeditor5-source-editing": "^32.0.0",
     "@ckeditor/ckeditor5-special-characters": "^32.0.0",
     "@ckeditor/ckeditor5-table": "^32.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^32.0.0",
-    "@ckeditor/ckeditor5-track-changes": "^32.0.0",
     "@ckeditor/ckeditor5-typing": "^32.0.0",
-    "@ckeditor/ckeditor5-word-count": "^32.0.0",
-    "@wiris/mathtype-ckeditor5": "^7.27.2",
+    "@ckeditor/ckeditor5-upload": "^32.0.0",
     "css-loader": "^5.2.7",
     "postcss": "^7.0.39",
     "postcss-loader": "^4.3.0",
@@ -62,7 +46,6 @@
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "npx http-server -o ./sample -s -c-1"
+    "build": "webpack --mode production"
   }
 }
