--- a/ckeditor5/package.json
+++ b/ckeditor5/package.json
@@ -9,8 +9,11 @@
   "devDependencies": {
     "@ckeditor/ckeditor5-alignment": "^32.0.0",
     "@ckeditor/ckeditor5-autoformat": "^32.0.0",
+    "@ckeditor/ckeditor5-autosave": "^32.0.0",
     "@ckeditor/ckeditor5-basic-styles": "^32.0.0",
     "@ckeditor/ckeditor5-block-quote": "^32.0.0",
+    "@ckeditor/ckeditor5-cloud-services": "^32.0.0",
+    "@ckeditor/ckeditor5-code-block": "^32.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^25.4.5",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^25.4.5",
     "@ckeditor/ckeditor5-editor-classic": "^32.0.0",
@@ -28,8 +31,10 @@
     "@ckeditor/ckeditor5-list": "^32.0.0",
     "@ckeditor/ckeditor5-markdown-gfm": "^32.0.0",
     "@ckeditor/ckeditor5-media-embed": "^32.0.0",
+    "@ckeditor/ckeditor5-page-break": "^32.0.0",
     "@ckeditor/ckeditor5-paragraph": "^32.0.0",
     "@ckeditor/ckeditor5-paste-from-office": "^32.0.0",
+    "@ckeditor/ckeditor5-remove-format": "^32.0.0",
     "@ckeditor/ckeditor5-source-editing": "^32.0.0",
     "@ckeditor/ckeditor5-special-characters": "^32.0.0",
     "@ckeditor/ckeditor5-table": "^32.0.0",
