--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "html-react-parser": "^1.4.5",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^2.0.0",
+    "moment": "^2.29.1",
     "next": "^12.1.0",
     "next-images": "^1.8.4",
     "react": "17.0.2",
