--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   "dependencies": {
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
-    "@ckeditor/ckeditor5-react": "^4.0.0",
+    "@ckeditor/ckeditor5-react": "^4.0.1",
     "@date-io/date-fns": "1.x",
-    "@emotion/react": "^11.4.1",
+    "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.3.0",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.8.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
-    "@mui/icons-material": "^5.3.1",
-    "@mui/lab": "^5.0.0-alpha.63",
-    "@mui/material": "^5.0.2",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.75",
+    "@mui/material": "^5.5.3",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tiptap/react": "^2.0.0-beta.104",
     "@tiptap/starter-kit": "^2.0.0-beta.168",
@@ -36,16 +36,18 @@
     "date-fns": "^2.28.0",
     "env-cmd": "^10.1.0",
     "esm": "^3.2.25",
-    "gapi-oauth-react-hooks": "^3.4.1",
-    "google-auth-library": "^7.11.0",
-    "html-react-parser": "^1.4.5",
+    "gapi-oauth-react-hooks": "^3.4.3",
+    "google-auth-library": "^7.14.1",
+    "html-react-parser": "^1.4.10",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^2.0.0",
     "moment": "^2.29.1",
-    "next": "^12.1.0",
+    "moment-timezone": "^0.5.34",
+    "next": "^12.1.4",
     "next-images": "^1.8.4",
+    "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
-    "react-bootstrap-icons": "^1.5.0",
+    "react-bootstrap-icons": "^1.8.1",
     "react-circular-progressbar": "^2.0.4",
     "react-corner-ribbon": "^0.0.5",
     "react-countup": "^6.0.0",
@@ -53,37 +55,38 @@
     "react-dropzone": "^11.4.2",
     "react-google-login": "^5.2.2",
     "react-google-recaptcha": "^2.1.0",
-    "react-hook-form": "^7.17.0",
+    "react-hook-form": "^7.29.0",
     "react-idle-timer": "^4.6.4",
     "react-loader-spinner": "^4.0.0",
     "react-loading-overlay-ts": "^0.2.0",
     "react-loading-skeleton": "^3.0.2",
-    "react-markdown": "^8.0.0",
+    "react-markdown": "^8.0.2",
     "react-move": "^6.5.0",
     "react-mui-fileuploader": "^0.1.2",
-    "react-player": "^2.9.0",
-    "react-query": "^3.34.12",
+    "react-player": "^2.10.0",
+    "react-query": "^3.34.19",
     "react-query-devtools": "^2.6.3",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.3.0",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.0.3",
     "react-typewriter": "^0.4.1",
+    "react-use": "^17.3.2",
     "react-visibility-sensor": "^5.1.1",
     "reactstrap": "^8.10.0",
-    "rxjs": "^7.5.2",
-    "sass": "^1.42.1",
+    "rxjs": "^7.5.5",
+    "sass": "^1.49.11",
     "save": "^2.4.0",
-    "uuidv4": "^6.2.12",
-    "webpack": "^5.69.1",
+    "uuidv4": "^6.2.13",
+    "webpack": "^5.71.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/gapi.auth2": "0.0.56",
-    "autoprefixer": "^10.3.6",
+    "autoprefixer": "^10.4.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "postcss": "^8.4.6",
+    "postcss": "^8.4.12",
     "raw-loader": "^4.0.2",
     "tailwindcss": "^2.2.16"
   }
