--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "17.0.2",
     "react-bootstrap-icons": "^1.8.1",
     "react-circular-progressbar": "^2.0.4",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-corner-ribbon": "^0.0.5",
     "react-countup": "^6.0.0",
     "react-dom": "17.0.2",
