--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-query": "^3.34.19",
     "react-query-devtools": "^2.6.3",
     "react-quill": "^1.3.5",
+    "react-responsive": "^9.0.0-beta.8",
     "react-router-dom": "^5.3.0",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.0.3",
