--- a/.env.production
+++ b/.env.production
@@ -24,6 +24,7 @@ NEXT_PUBLIC_API_URL=https://api.uvsity.com/uvsity/v1/
 NEXT_PUBLIC_API_URLV2=https://api.uvsity.com/uvsity/v2/
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LcR5PwSAAAAAExCXrkpFPC4oT5oRtdf4uqhfLVG
 NEXT_PUBLIC_IP_INFO_ENDPOINT=https://api.ipdata.co?api-key=7f8d8e0c0be76a27c8d30fe0d9034ae60b057c4c6e6b912f0531c3fb
+NEXT_PUBLIC_COUNTRIES_INFO_ENDPOINT=https://restcountries.com/v3.1/all
 GENERATE_SOURCEMAP=false
 NEXT_PUBLIC_FALLBACK_PROFILE_COVER_URL=https://i.pinimg.com/originals/73/23/c1/7323c115f85c7d6653337e020b9180ae.png
 NEXT_FALLBACK_PROFILE_COVER_URL=https://i.pinimg.com/originals/73/23/c1/7323c115f85c7d6653337e020b9180ae.png
