--- a/.env.staging
+++ b/.env.staging
@@ -13,7 +13,7 @@ NEXT_PUBLIC_APP_LOGO_IMAGE=/static/images/logo/logo_480x480.png
 NEXT_PUBLIC_APP_HERO_IMAGE=/static/images/hero-poster.png
 NEXT_PUBLIC_APP_LOGO_IMAGE_SHORTHAND=/static/images/logo/logo_sh.png
 NEXT_PUBLIC_APP_STATS_ILLUSTRATION_IMAGE=/static/images/stats_counter_illustration.png
-NEXT_PUBLIC_APP_TRENDING_SESSION_ILLUSTRATION_IMAGE=/static/images/hero-poster.jpg
+NEXT_PUBLIC_APP_TRENDING_SESSION_ILLUSTRATION_IMAGE=/static/images/hero-poster-removebg-preview.png
 NEXT_PUBLIC_APP_CONTINUE_WITH_GOOGLE_IMAGE=/static/images/sign_in_with_google.png
 NEXT_PUBLIC_APP_HASH=#uvsity
 NEXT_PUBLIC_APP_OG_TOKEN_UUID=e3ac6904-f01b-47d2-99e9-048d3840b5b5
