--- a/.env.staging
+++ b/.env.staging
@@ -21,7 +21,7 @@ NEXT_PUBLIC_APP_FOOTER_TEXT=© 2022 uvsity Corporation.‎
 NEXT_PUBLIC_APP_MANIFEST_PATH=/manifest.json
 NEXT_PUBLIC_APP_FAVICON_PATH=/favicon.ico
 NEXT_PUBLIC_APP_THEME_COLOR=#0f8dbf
-NEXT_PUBLIC_API_URL=https://api.uvsity.com/uvsity/v1/
+NEXT_PUBLIC_API_URL=https://dev.uvsity.com/uvsity/v1/
 NEXT_PUBLIC_API_URLV2=https://dev.uvsity.com/uvsity/v2/
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LcR5PwSAAAAAExCXrkpFPC4oT5oRtdf4uqhfLVG
 NEXT_PUBLIC_IP_INFO_ENDPOINT=https://api.ipdata.co?api-key=7f8d8e0c0be76a27c8d30fe0d9034ae60b057c4c6e6b912f0531c3fb
