--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.5.3",
+    "@mui/x-date-pickers": "^5.0.0-beta.7",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tiptap/react": "^2.0.0-beta.104",
     "@tiptap/starter-kit": "^2.0.0-beta.168",
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "caniuse-lite": "^1.0.30001383",
     "chalk": "^4.1.2",
     "ckeditor5-custom-build": "file:./ckeditor5",
     "d3-ease": "^3.0.1",
     "date-fns": "^2.28.0",
+    "dayjs": "^1.11.5",
     "env-cmd": "^10.1.0",
     "esm": "^3.2.25",
     "gapi-oauth-react-hooks": "^3.4.3",
