--- a/package.json
+++ b/package.json
@@ -10,91 +10,91 @@
     "build:production": "env-cmd -f .env.production next build"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@ckeditor/ckeditor5-react": "^4.0.1",
     "@date-io/date-fns": "1.x",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.3.0",
-    "@hookform/error-message": "^2.0.0",
-    "@hookform/resolvers": "^2.8.1",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^2.9.10",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/pickers": "^3.3.10",
-    "@mui/icons-material": "^5.5.1",
-    "@mui/lab": "^5.0.0-alpha.75",
-    "@mui/material": "^5.5.3",
-    "@mui/x-date-pickers": "^5.0.0-beta.7",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.107",
+    "@mui/material": "^5.10.13",
+    "@mui/x-date-pickers": "^5.0.8",
     "@tailwindcss/line-clamp": "^0.2.1",
-    "@tiptap/react": "^2.0.0-beta.104",
-    "@tiptap/starter-kit": "^2.0.0-beta.168",
+    "@tiptap/react": "^2.0.0-beta.202",
+    "@tiptap/starter-kit": "^2.0.0-beta.202",
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.21.4",
-    "bootstrap": "^5.1.1",
-    "caniuse-lite": "^1.0.30001383",
+    "bootstrap": "^5.2.2",
+    "caniuse-lite": "^1.0.30001431",
     "chalk": "^4.1.2",
     "ckeditor5-custom-build": "file:./ckeditor5",
     "d3-ease": "^3.0.1",
-    "date-fns": "^2.28.0",
-    "dayjs": "^1.11.5",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.6",
     "env-cmd": "^10.1.0",
     "esm": "^3.2.25",
-    "gapi-oauth-react-hooks": "^3.4.3",
+    "gapi-oauth-react-hooks": "^3.4.4",
     "google-auth-library": "^7.14.1",
-    "html-react-parser": "^1.4.10",
+    "html-react-parser": "^1.4.14",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "markdown-to-html-converter": "^1.0.4",
-    "material-ui-popup-state": "^2.0.0",
+    "material-ui-popup-state": "^2.0.1",
     "moment": "^2.29.4",
-    "moment-timezone": "^0.5.34",
-    "next": "^12.1.4",
+    "moment-timezone": "^0.5.38",
+    "next": "^12.3.3",
     "next-images": "^1.8.4",
-    "next-transpile-modules": "^9.0.0",
+    "next-transpile-modules": "^9.1.0",
     "react": "17.0.2",
-    "react-bootstrap-icons": "^1.8.1",
-    "react-circular-progressbar": "^2.0.4",
+    "react-bootstrap-icons": "^1.9.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-corner-ribbon": "^0.0.5",
-    "react-countup": "^6.0.0",
+    "react-countup": "^6.3.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
     "react-google-login": "^5.2.2",
     "react-google-recaptcha": "^2.1.0",
-    "react-hook-form": "^7.29.0",
+    "react-hook-form": "^7.39.3",
     "react-idle-timer": "^4.6.4",
     "react-loader-spinner": "^4.0.0",
     "react-loading-overlay-ts": "^0.2.0",
-    "react-loading-skeleton": "^3.0.2",
-    "react-markdown": "^8.0.2",
+    "react-loading-skeleton": "^3.1.0",
+    "react-markdown": "^8.0.3",
     "react-move": "^6.5.0",
     "react-mui-fileuploader": "^0.1.2",
-    "react-player": "^2.10.0",
-    "react-query": "^3.34.19",
+    "react-player": "^2.11.0",
+    "react-query": "^3.39.2",
     "react-query-devtools": "^2.6.3",
     "react-quill": "^1.3.5",
-    "react-responsive": "^9.0.0-beta.8",
-    "react-router-dom": "^5.3.0",
+    "react-responsive": "^9.0.0",
+    "react-router-dom": "^5.3.4",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.0.3",
     "react-typewriter": "^0.4.1",
-    "react-use": "^17.3.2",
+    "react-use": "^17.4.0",
     "react-visibility-sensor": "^5.1.1",
     "reactstrap": "^8.10.0",
-    "rxjs": "^7.5.5",
-    "sass": "^1.49.11",
-    "save": "^2.4.0",
+    "rxjs": "^7.5.7",
+    "sass": "^1.56.1",
+    "save": "^2.9.0",
     "uuidv4": "^6.2.13",
-    "webpack": "^5.71.0",
+    "webpack": "^5.75.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/gapi.auth2": "0.0.56",
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "^10.4.13",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.19",
     "raw-loader": "^4.0.2",
-    "tailwindcss": "^3.1.6"
+    "tailwindcss": "^3.2.4"
   }
 }
