--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@mui/x-date-pickers": "^5.0.8",
     "@syncfusion/ej2-react-richtexteditor": "^20.3.59",
     "@tailwindcss/line-clamp": "^0.2.1",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "@tiptap/react": "^2.0.0-beta.202",
     "@tiptap/starter-kit": "^2.0.0-beta.202",
     "@zeit/next-css": "^1.0.1",
@@ -69,8 +71,6 @@
     "react-move": "^6.5.0",
     "react-mui-fileuploader": "^0.1.2",
     "react-player": "^2.11.0",
-    "react-query": "^3.39.2",
-    "react-query-devtools": "^2.6.3",
     "react-quill": "^1.3.5",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^5.3.4",
