Sharing to social media module. Complete

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_APP_HOME_URL=https://www.uvsity.com/
+NEXT_PUBLIC_APP_HOME_URL_BETA=https://dev2.uvsity.com/
 NEXT_PUBLIC_CALENDAR_APP_URL=https://uvsity.com/meeting/
 NEXT_PUBLIC_APP_NAME=uvsity
 NEXT_PUBLIC_APP_NAME_V2=UVSity
