--- a/.env.staging
+++ b/.env.staging
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_APP_HOME_URL=https://dev.uvsity.com/
+NEXT_PUBLIC_APP_HOME_URL_BETA=https://dev2.uvsity.com/
 NEXT_PUBLIC_CALENDAR_APP_URL=https://dev.uvsity.com/meeting/
 NEXT_PUBLIC_APP_NAME=uvsity
 NEXT_PUBLIC_APP_NAME_V2=UVSity
