--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "caniuse-lite": "^1.0.30001431",
     "chalk": "^4.1.2",
     "ckeditor5-custom-build": "file:./ckeditor5",
+    "clipboard": "^2.0.11",
     "d3-ease": "^3.0.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
