--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-responsive": "^9.0.0",
     "react-router-dom": "^5.3.4",
     "react-spinners": "^0.11.0",
+    "react-timeago": "^7.2.0",
     "react-toastify": "^8.0.3",
     "react-typewriter": "^0.4.1",
     "react-use": "^17.4.0",
