--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lodash": "^4.17.21",
     "markdown-to-html-converter": "^1.0.4",
     "material-ui-popup-state": "^2.0.1",
+    "mdbootstrap": "^4.20.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.38",
     "next": "^12.3.3",
@@ -73,7 +74,7 @@
     "react-move": "^6.5.0",
     "react-mui-fileuploader": "^0.1.2",
     "react-player": "^2.11.0",
-    "react-quill": "^1.3.5",
+    "react-quill": "^2.0.0",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^5.3.4",
     "react-spinners": "^0.11.0",
